<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.BottomNavigationScreens.ProfileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_16sdp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.appbar.AppBarLayout
                        android:id="@+id/appbar"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_200sdp">

                        <ImageView
                            android:id="@+id/app_bar_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@android:drawable/sym_def_app_icon" />

                    </com.google.android.material.appbar.AppBarLayout>



                    <TextView
                        android:id="@+id/company_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_24sdp"
                        android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                        android:gravity="right"
                        android:text="@string/company_name"
                        android:textColor="@color/title_text"
                        android:textSize="@dimen/_30sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_16sdp"
                        android:gravity="right|center_vertical">

                        <TextView
                            android:id="@+id/address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_8sdp"
                            android:fontFamily="@font/ibm_plex_sans_arabic_light"
                            android:gravity="center_vertical"
                            android:text="@string/company_location"
                            android:textColor="@color/title_text"
                            android:textSize="@dimen/_14sdp" />

                        <ImageView
                            android:layout_width="@dimen/_18sdp"
                            android:layout_height="@dimen/_18sdp"
                            android:src="@drawable/ic_location_gray" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_16sdp"
                        android:gravity="right|center_vertical">

                        <TextView
                            android:id="@+id/category_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_8sdp"
                            android:fontFamily="@font/ibm_plex_sans_arabic_light"
                            android:gravity="center_vertical"
                            android:text="@string/company_major"
                            android:textColor="@color/title_text"
                            android:textSize="@dimen/_14sdp" />

                        <ImageView
                            android:layout_width="@dimen/_18sdp"
                            android:layout_height="@dimen/_18sdp"
                            android:src="@drawable/ic_category" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_16sdp"
                        android:gravity="right|center_vertical">

                        <TextView
                            android:id="@+id/company_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_8sdp"
                            android:fontFamily="@font/ibm_plex_sans_arabic_light"
                            android:gravity="center_vertical"
                            android:text="@string/email_address"
                            android:textColor="@color/title_text"
                            android:textSize="@dimen/_14sdp" />

                        <ImageView
                            android:layout_width="@dimen/_18sdp"
                            android:layout_height="@dimen/_18sdp"
                            android:src="@drawable/ic_email" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/company_whatsapp_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_16sdp"
                        android:gravity="right|center_vertical">

                        <TextView
                            android:id="@+id/company_whatsapp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_8sdp"
                            android:fontFamily="@font/ibm_plex_sans_arabic_light"
                            android:gravity="center_vertical"
                            android:text="@string/whatsapp_num"
                            android:textColor="@color/title_text"
                            android:textSize="@dimen/_14sdp" />

                        <ImageView
                            android:layout_width="@dimen/_18sdp"
                            android:layout_height="@dimen/_18sdp"
                            android:src="@drawable/ic_whatsapp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/company_btn_edit_profile"
                        style="@style/blue_btn"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginHorizontal="@dimen/_16sdp"
                        android:background="@drawable/btn_small"
                        android:text="@string/edit_profile" />

                    <View
                        style="@style/divider"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:layout_marginRight="@dimen/_16sdp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_ads"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_4sdp"
                        android:layout_marginRight="@dimen/_4sdp"
                        android:minHeight="@dimen/_400sdp"
                        tools:listitem="@layout/custom_post_item" />



                </LinearLayout>

                <ImageView
                    android:id="@+id/verified"
                    android:layout_width="@dimen/_52sdp"
                    android:layout_height="@dimen/_52sdp"
                    android:src="@drawable/verified"
                    android:layout_marginTop="@dimen/_174sdp"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:visibility="gone"/>
            </androidx.coordinatorlayout.widget.CoordinatorLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_ads"
            android:layout_width="@dimen/_52sdp"
            android:layout_height="@dimen/_52sdp"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:src="@drawable/ic_add"
            app:fabCustomSize="@dimen/_52sdp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBottomOf="parent">

        <include layout="@layout/profile_student_placeholder"/>

    </com.facebook.shimmer.ShimmerFrameLayout>


</LinearLayout>
