<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp">

            <ImageView
                android:id="@+id/ads_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:background="@color/gray_bg"
                android:padding="@dimen/_2sdp"/>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_52sdp"
                android:hint="@string/ads_title"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeWidth="0dp"
                app:hintTextColor="@color/subtitle_text"
                android:background="@color/gray_bg"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp">

            <Spinner
                android:id="@+id/major"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_52sdp"
                android:theme="@style/spinner"
                android:background="@color/gray_bg"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:hint="@string/description1"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeWidth="0dp"
                app:hintTextColor="@color/subtitle_text"
                android:background="@color/gray_bg"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:hint="@string/ads_requirements"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeWidth="0dp"
                app:hintTextColor="@color/subtitle_text"
                android:background="@color/gray_bg"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>




            <Button
                android:id="@+id/btn_add_ads"
                style="@style/blue_btn"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:background="@color/gray_bg"/>




    </LinearLayout>

</ScrollView>