<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/basic"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap"
                app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
                app:toolbarId="@+id/toolbar">

                <ImageView
                    android:id="@+id/app_bar_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@android:drawable/sym_def_app_icon"
                    app:layout_collapseMode="parallax" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="@dimen/_48sdp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/nasted_corner"
                android:orientation="vertical"
                android:paddingTop="@dimen/_16sdp">

                <TextView
                    android:id="@+id/student_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:text="@string/student_name"
                    android:textColor="@color/title_text"
                    android:textSize="@dimen/_30sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:gravity="right|center_vertical">

                    <TextView
                        android:id="@+id/tv_university_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:fontFamily="@font/ibm_plex_sans_arabic_light"
                        android:gravity="center_vertical"
                        android:text="@string/university_name"
                        android:textColor="@color/title_text"
                        android:textSize="@dimen/_14sdp" />

                    <!--                <ImageView-->
                    <!--                    android:layout_width="@dimen/_20sdp"-->
                    <!--                    android:layout_height="@dimen/_20sdp"-->
                    <!--                    android:src="@drawable/ic_location_gray" />-->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:gravity="right|center_vertical">

                    <TextView
                        android:id="@+id/tv_specialization_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:fontFamily="@font/ibm_plex_sans_arabic_light"
                        android:gravity="center_vertical"
                        android:text="@string/specialization_name"
                        android:textColor="@color/title_text"
                        android:textSize="@dimen/_14sdp" />

                    <!--                <ImageView-->
                    <!--                    android:layout_width="@dimen/_20sdp"-->
                    <!--                    android:layout_height="@dimen/_20sdp"-->
                    <!--                    android:src="@drawable/ic_business_gray"/>-->

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:cardElevation="@dimen/_8sdp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_68sdp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/whatsapp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_24sdp"
                                android:layout_height="@dimen/_24sdp"
                                android:layout_marginBottom="@dimen/_4sdp"
                                android:src="@drawable/ic_whatsapp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/whatsapp2"
                                android:textColor="@color/title_text"
                                android:textSize="@dimen/_12sdp" />

                        </LinearLayout>

                        <View
                            android:layout_width="@dimen/_1sdp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_marginBottom="@dimen/_8sdp"
                            android:background="@color/subtitle_text" />

                        <LinearLayout
                            android:id="@+id/Gmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_24sdp"
                                android:layout_height="@dimen/_24sdp"
                                android:layout_marginBottom="@dimen/_4sdp"
                                android:src="@drawable/ic_gmail" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gmail"
                                android:textColor="@color/title_text"
                                android:textSize="@dimen/_12sdp" />

                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <View
                    style="@style/divider"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_16sdp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_jobs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:layout_marginRight="@dimen/_6sdp"
                    tools:listitem="@layout/custom_job_item" />

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBottomOf="parent">

        <include layout="@layout/profile_student_placeholder"/>

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>